[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/entity/item/item_hand/water_wand.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/charge_water.png" type="Texture" id=2]
[ext_resource path="res://assets/entity/item/water_wand.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "action1"
length = 0.2
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "create_water_projectile1"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Item:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 40.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "action2"
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "create_water_projectile2"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Item:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.5, 0.65, 0.85, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 10.0, 0.0, -10.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChargingParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChargingParticles:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 2.0 ]
}

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.244131, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.431925, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.2
radial_accel = -80.0
radial_accel_random = 0.3
scale = 0.3
scale_random = 0.3
scale_curve = SubResource( 5 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Item_hand" type="Position2D"]
position = Vector2( 1, -4 )
script = ExtResource( 1 )

[node name="Item" type="Sprite" parent="."]
position = Vector2( 10, 0 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -16 )
region_rect = Rect2( 48, 0, 48, 54 )

[node name="ActionPlayer" type="AnimationPlayer" parent="."]
anims/action1 = SubResource( 1 )
anims/action2 = SubResource( 2 )

[node name="ChargingParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 20, -10 )
emitting = false
amount = 32
speed_scale = 2.0
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="Shoot_delay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Charge_shoot_delay" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Shoot_delay" to="." method="_on_Shoot_delay_timeout"]
[connection signal="timeout" from="Charge_shoot_delay" to="." method="_on_Charge_shoot_delay_timeout"]
